--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mongoose": "^6.1.4",
     "multer": "^1.4.4",
     "nodemon": "^2.0.15",
+    "papaparse": "^5.3.1",
     "path": "^0.12.7"
   }
 }
