--- a/package.json
+++ b/package.json
@@ -10,17 +10,12 @@
   "author": "Gaurav Mehra",
   "license": "ISC",
   "dependencies": {
-    "connect-flash": "^0.1.1",
-    "csv-parser": "^3.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.2",
     "express-ejs-layouts": "^2.5.1",
-    "express-session": "^1.17.2",
-    "fs": "0.0.1-security",
     "mongoose": "^6.1.4",
     "multer": "^1.4.4",
     "nodemon": "^2.0.15",
-    "papaparse": "^5.3.1",
-    "path": "^0.12.7"
+    "papaparse": "^5.3.1"
   }
 }
